<resources>
    <string name="app_name">Audiminder</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="authenticate">Authenticate</string>
    <string name="audiminder">Audiminder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile_photo_as_a_small_icon_in_the_top_left">Profile photo as a small icon in the top left</string>
    <string name="album_art">Album art</string>
    <string name="reminders">Reminders</string>
    <string name="settings_icon_in_the_top_right">Settings icon in the top right</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="microphone_icon_in_the_top_left_that_triggers_add_from_nearby_sound_functionality">Microphone icon in the top left that triggers Add From Nearby Sound functionality.</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="search_through_spotify">Search through Spotify!</string>
    <string name="sorting_button_that_allows_the_user_to_sort_alphabetically_or_by_size_of_the_collection">Sorting button that allows the user to sort alphabetically or by size of the collection.</string>
    <string name="collections">Collections</string>
    <string name="add">Add</string>
    <string name="collage_of_all_the_albums_in_this_collection">Collage of all the albums in this collection.</string>
    <string name="create_a_new_collection">Create a new collection</string>
    <string name="search_bar_used_to_filter_out_the_list_of_albums_in_your_collection">Search bar used to filter out the list of albums in your collection.</string>
    <string name="search_for_specific_albums_in_your_collection">Search for specific albums in your collection.</string>
    <string name="art_for_the_album_that_was_chosen">Art for the album that was chosen.</string>
    <string name="play_button_that_will_start_playing_this_album_from_track_one_in_the_spotify_application">Starts playing this album from track one in the Spotify application.</string>
    <string name="starts_playing_this_track_on_the_spotify_application">Starts playing this track on the Spotify application.</string>
    <string name="export_collections">Export Collections</string>
    <string name="import_collections">Import Collections</string>
    <string name="delete_all_collections">Delete All Collections</string>
    <string name="unauthenticate_spotify">Unauthenticate Spotify</string>
    <string name="listening">Listening…</string>
    <string name="name_your_reminder">Name your reminder…</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="notes_optional">Notes (optional)</string>
    <string name="submit">Submit</string>
    <string name="save_reminder">Save Reminder</string>
    <string name="home">Home</string>
    <string name="search_spotify">Search Spotify</string>
    <string name="collections_library">Collections Library</string>
    <string name="search_bar_that_allows_searching_though_a_service_you_have_authorized_with">Search bar that allows searching though a service you have authorized with.</string>
    <string name="you_must_authorize_to_continue">You must authorize to continue…</string>
    <string name="tap_the_button_below_to_authorize_the_app_to_access_your_spotify_account">Tap the button below to authorize the app to access your Spotify account.</string>
    <string name="authorize_spotify">AUTHORIZE SPOTIFY</string>
    <string name="unauthenticated_spotify">Unauthenticated Spotify</string>
    <string name="welcome">Welcome!</string>
    <string name="unauthenticate">Unauthenticate</string>
    <string name="recommendations">Recommendations</string>
    <string name="add_to_existing_collection">Add to Existing Collection</string>
    <string name="create_new_collection">Create New Collection</string>
    <string name="give_your_collection_a_name">Give your collection a name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="find_collection">Find collection</string>
    <string name="search_bar_that_allows_you_to_search_for_a_collection">Search bar that allows you to search for a collection</string>
    <string name="add_a_new_collection">Add a new collection</string>
    <string name="add_new_collection">Add New Collection</string>
    <string name="give_your_collection_a_name_here">Give your collection a name here.</string>
    <string name="sort_by">Sort by</string>
    <string name="alphabetical_a_z">Alphabetical (A-Z)</string>
    <string name="alphabetical_z_a">Alphabetical (Z-A)</string>
    <string name="recently_updated">Recently Updated</string>
    <string name="oldest">Least Recently</string>
    <string name="largest">Largest to Smallest</string>
    <string name="smallest">Smallest to Largest</string>
    <string name="a_checkmark_will_be_displayed_here_if_this_option_is_selected">A checkmark will be displayed here if this option is selected</string>
    <string name="delete_collection">Delete collection</string>
</resources>