<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/give_collection_a_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/give_your_collection_a_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/give_collection_a_name_text_input_layout"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:maxWidth="488dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/give_collection_name_text_input_layout_margins"
            android:layout_marginEnd="@dimen/give_collection_name_text_input_layout_margins"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/give_collection_a_name_text"
            app:layout_constraintVertical_bias="0.100000024">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/give_collection_a_name_edit_text"
                android:contentDescription="@string/give_your_collection_a_name_here"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/give_collection_a_name_text_input_layout"
            app:layout_constraintVertical_bias="0.120000005">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/create" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
