<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".collections.presentation.CollectionsScreenFragment">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/collections_screen_top_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_bar_top_margin">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/collections_top_bar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginBottom="@dimen/app_bar_search_margin_bottom"
                    app:menu="@menu/collections_top_app_bar"
                    app:title="@string/collections_library"
                    app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <com.google.android.material.search.SearchBar
                    android:id="@+id/search_collections_bar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/search_bar_height"
                    android:contentDescription="@string/search_bar_used_to_filter_out_the_list_of_albums_in_your_collection"
                    android:hint="@string/what_are_you_looking_for"
                    tools:ignore="ContentDescription" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/collections_screen_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:itemCount="6"
                    tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    tools:listitem="@layout/item_collection_list_view"
                    tools:spanCount="2" />

            </com.google.android.material.appbar.AppBarLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>


    </FrameLayout>
</layout>